Compiler diagnostic improvement
arkts-no-untyped-obj-literals

The compiler now throws error message if the user tries to initialize an Object type with literals.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICO3VH
Internal issue: #23539

Change-Id: I39a78754f7ed0b3dc0ffa96a35805abc86f78ac5
Signed-off-by: Istvan Romai <istvan.romai@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -463,6 +463,10 @@ semantic:
   id: 343
   message: "Indexed signatures are not allowed. Use arrays instead!"
 
+- name: ERROR_ARKTS_NO_UNTYPED_OBJ_LITERALS
+  id: 115343
+  message: "'Object', 'object', 'any' types cannot be initialized with object literals."
+
 - name: ERROR_ARKTS_SPREAD_ONLY_WITH_REST
   id: 44192
   message: "The function or method being called needs a rest parameter to accept arguments passed via the spread operator."
@@ -1604,7 +1608,6 @@ semantic:
 - name: WRONG_OPERAND_TYPE_FOR_UNARY_EXPRESSION
   id: 347
   message: "Wrong operand type for unary expression"
-
 
 graveyard:
 - 8
