--- a/ets2panda/aot/BUILD.gn
+++ b/ets2panda/aot/BUILD.gn
@@ -53,7 +53,8 @@ ohos_executable("ets2panda") {
   }
 
   configs += [
-    "$ark_es2panda_root:libes2panda_public_config"
+    "$ark_es2panda_root:libes2panda_public_config",
+    "$ark_es2panda_root:libes2panda_config",
   ]
 
   deps = [
