--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -11,6 +11,7 @@
     "arkts-no-globalthis",
     "arkts-no-func-props",
     "arkts-no-func-bind",
+    "arkts-no-function-return-this",
     "arkts-limited-stdlib",
     "arkts-no-classes-as-obj",
     "arkts-obj-literal-props",
