Revert "Fix soft keywords: instanceof, typeof"
This reverts commit 21c90b0e5f0fa300dc1ebc6b5cf62964a73adab9.

Issue: ICONF6
Internal issue: 28193

Change-Id: Ifd8b3665eacc5fbf2c580efd50371920ce0c7be2

Signed-off-by: Robert Sipka <robert.sipka@h-lab.eu>

--- a/ets2panda/lexer/scripts/keywords.yaml
+++ b/ets2panda/lexer/scripts/keywords.yaml
@@ -312,8 +312,7 @@ keywords:
 
   - name: 'instanceof'
     token: KEYW_INSTANCEOF
-    keyword: [as, js, ts]
-    keyword_like: [ets]
+    keyword: [as, js, ets, ts]
     flags: [binary]
 
   - name: 'int'
