no-local-class impl
Description: no-local-class rule implemented.
Issue: #ICOE0H
Signed-off-by: e-day <emirhan.day@huawei-partners.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -23,6 +23,7 @@
     "arkts-incompatible-function-types",
     "arkts-limited-void-type",
     "arkts-no-void-operator",
+    "arkts-no-local-class",
     "arkts-no-ts-overload",
     "arkts-limited-literal-types",
     "arkts-no-exponent-op",
