arkts-var-assignment-before-use impl
Description: arkts-var-assignment-before-use rule implemented
Issue: ICP89G
Signed-off-by: sefayilmazunal <sefa.yilmaz.unal@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -14,6 +14,7 @@
     "arkts-no-function-return-this",
     "arkts-limited-stdlib",
     "arkts-no-class-add-super-prop-with-readonly",
+    "arkts-var-assignment-before-use",
     "arkts-no-classes-as-obj",
     "arkts-obj-literal-props",
     "arkts-no-template-string-type",
