--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -15,6 +15,7 @@
     "arkts-limited-stdlib",
     "arkts-no-classes-as-obj",
     "arkts-obj-literal-props",
+    "arkts-obj-literal-key-type",
     "arkts-optional-methods",
     "arkts-numeric-semantic",
     "arkts-incompatible-function-types",
