Error for optional method
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICON5K

Reason:
Optional methods are not supported in ArkTS. Throw more clear error.

Description:
Added extra checks.

Fixed internal issue: #28175

Signed-off-by: Haag Boglarka <boglarka.haag@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -895,6 +895,10 @@ syntax:
   id: 321
   message: "initModule() only accept string literal as argument."
 
+- name: OPTIONAL_METHOD
+  id: 129375
+  message: "Optional methods are not supported."
+
 - name: OPTIONAL_VARIABLE
   id: 306
   message: "Optional variable is deprecated and no longer supported."
