arkts-no-template-string-type rule implementation
Issue: #ICOX4A

Description: arkts-no-template-string-type rule implementation
Signed-off-by: Raif Mirza Erten <raif.mirza.erten@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -16,6 +16,7 @@
     "arkts-no-class-add-super-prop-with-readonly",
     "arkts-no-classes-as-obj",
     "arkts-obj-literal-props",
+    "arkts-no-template-string-type",
     "arkts-obj-literal-key-type",
     "arkts-optional-methods",
     "arkts-numeric-semantic",
