Disallow using generic lambda expressions
Generic lambda expression has been removed from latest
specification. Revert a commit that introduces generic
lambda expressions: 868b2e3

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICOXCS
Internal issues: #28084

Signed-off-by: Roland Takacs <roland.takacs@huawei.com>
Change-Id: I6e196d03a0502458b523e3b2fe93dcd6064aab29

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -371,6 +371,10 @@ syntax:
   id: 314
   message: "Generator functions are not supported, please use async/await mechanism for multitasking"
 
+- name: GENERIC_LAMBDA_NOT_SUPPORTED
+  id: 12842
+  message: "Generic lambda expressions are not supported."
+
 - name: GETTER_FORMAL_PARAMS
   id: 58
   message: "Getter must not have formal parameters."
