--- a/arkguard/BUILD.gn
+++ b/arkguard/BUILD.gn
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("//build/templates/cxx/prebuilt.gni")
+
 typescript_dir = get_label_info("//third_party/typescript:build_typescript",
                                 "target_out_dir")
 
@@ -50,7 +52,7 @@ action("build_arkguard") {
     "src/utils/TypeUtils.ts",
   ]
 
-  deps = [ "//third_party/typescript:build_typescript" ]
+  external_deps = [ "typescript:build_typescript_etc" ]
   script = "compile_arkguard.py"
   args = [
     rebase_path(get_path_info("./", "abspath")),
@@ -59,4 +61,12 @@ action("build_arkguard") {
   ]
 
   outputs = [ "${target_out_dir}/arkguard-1.1.3.tgz" ]
+}
+
+ohos_prebuilt_etc("build_arkguard_etc") {
+  source = "OAT.xml"
+  deps = [ ":build_arkguard" ]
+  install_enable = false
+  part_name = "ets_frontend"
+  subsystem_name = "arkcompiler"
 }
