--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -13,6 +13,7 @@
     "arkts-no-func-bind",
     "arkts-no-function-return-this",
     "arkts-limited-stdlib",
+    "arkts-no-class-add-super-prop-with-readonly",
     "arkts-no-classes-as-obj",
     "arkts-obj-literal-props",
     "arkts-obj-literal-key-type",
