--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -334,8 +334,9 @@ syntax:
 - name: FIELD_IN_PARAM
   id: 319
   message: "Declaring fields in parameter list is not supported"
+  code_fix_ids: [ClassSuperMustPrecedeThisAccess]
 
-- name: FIELD_TPYE_ANNOTATION_MISSING
+- name: FIELD_TYPE_ANNOTATION_MISSING
   id: 121
   message: "Field type annotation expected."
 
