--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -113,6 +113,7 @@ set(ES2PANDA_LSP_SRC
   ./src/register_code_fix/add_missing_new_operator.cpp
   ./src/register_code_fix/fix_class_doesnt_implement_inherited_abstract_member.cpp
   ./src/register_code_fix/fix_expected_comma.cpp
+  ./src/register_code_fix/fix_extends_interface_becomes_implements.cpp
   ./src/register_code_fix/fix_return_type_in_async_function.cpp
   ./src/register_code_fix/add_missing_declare_property.cpp
   ./src/register_code_fix/convert_const_to_let.cpp
