rule impl no-import-namespace-with-star-as-var
Description: add rule and test cases

Issue: #ICOX6X
Signed-off-by: beratagaca_9a91 <berat.agaca1@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -45,6 +45,7 @@
     "arkts-class-static-initialization",
     "arkts-invalid-identifier",
     "arkts-no-import-json-file",
+    "arkts-no-import-namespace-with-star-as-var",
     "arkts-no-extends-expression",
     "arkts-no-ts-like-function-call",
     "arkts-method-inherit-rule",
