[LSP] Constructor for derived need super call
Issue:  https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICPADA
Signed-off-by: dogasahin_7f63 <doga.sahin3@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -303,6 +303,7 @@ semantic:
 - name: CTOR_MISSING_SUPER_CALL
   id: 192
   message: "Must call super constructor"
+  code_fix_ids: [ConstructorDerivedNeedSuper]
 
 - name: CTOR_REF_INVALID_CTX_GLOBAL
   id: 203
