--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -89,6 +89,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/refactors/refactor_types.cpp",
     "src/references.cpp",
     "src/register_code_fix/add_missing_declare_property.cpp",
+    "src/register_code_fix/constructor_for_derived_need_super_call.cpp",
     "src/register_code_fix/add_missing_new_operator.cpp",
     "src/register_code_fix/convert_const_to_let.cpp",
     "src/register_code_fix/fix_add_function_return_statement.cpp",
