Fix delete operator error message
Reason:
Currently misleading error message on delete

Description:
Extending checker NotResolvedError method to separate delete

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICPD0L

Signed-off-by: Torok Gergo <gergo.torok@h-lab.eu>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -251,6 +251,8 @@ defines:
     ref: CLASS_INITIALIZE_METHOD
   - name: 'constructor'
     ref: CONSTRUCTOR_NAME
+  - name: 'delete'
+    ref: DELETE
 
 packages:
   - name: 'std.core'
