--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -66,7 +66,8 @@
     "arkts-unsupport-operator",
 	"arkts-no-duplicate-function-name",
     "arkts-require-func-arg-type",
-	"arkts-subclass-must-call-super-constructor-with-args"
+	"arkts-subclass-must-call-super-constructor-with-args",
+    "arkts-no-esobject-support"
   ],
   "interop": [
     "arkts-interop-js2s-inherit-js-class",
