cherry-pick to 0728: Fix the bug of Required
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICSC6D

Signed-off-by: tengtengh <tenghao9@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -976,6 +976,10 @@ semantic:
   id: 123
   message: "Spread argument for the rest parameter can be only one."
 
+- name: MUST_BE_CLASS_INTERFACE_TYPE
+  id: 124644
+  message: "T in {}<T> must be a class or an interface type."
+
 - name: NAMESPACE_AS_TYPE
   id: 158
   message: "Namespace '{}' cannot be used as a type."
