Fix ambiguous ambient function call crash
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICPL0E

Description:
When an ambient and non-ambient function with the same name exists, report CTE and set TypeError.

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: zengzengran <zengran2@huawei.com>#

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -69,6 +69,10 @@ semantic:
   id: 175
   message: "A 'const' initializer in an ambient context must be a string or numeric literal: {}"
 
+- name: AMBIGUOUS_AMBIENT
+  id: 399
+  message: "Method declaration `{}` must all ambient or non-ambient"
+
 - name: AMBIGUOUS_CALL
   id: 142
   message: "Call to `{}` is ambiguous as `2` versions of `{}` are available: `{}{}` and `{}{}`"
