Compiler diagnostic improvement
arkts-no-with

The compiler now throws specific error message if the user tries to use 'with' statement.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICPMV8
Internal issue: #28219

Change-Id: I88dd1cc3415da9c6af1a7906678362b04da62e9b
Signed-off-by: Istvan Romai <istvan.romai@huawei.com>

--- a/ets2panda/lexer/scripts/keywords.yaml
+++ b/ets2panda/lexer/scripts/keywords.yaml
@@ -592,6 +592,7 @@ keywords:
   - name: 'with'
     token: KEYW_WITH
     keyword: [js, ts]
+    keyword_like: [ets]
 
   - name: 'yield'
     token: KEYW_YIELD
