--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -271,6 +271,10 @@ syntax:
   id: 297
   message: "'var' keyword is not supported. Use 'let' instead."
 
+- name: ERROR_ARKTS_NO_WITH
+  id: 116901
+  message: "'with' statement is not supported, please use fully qualified names!"
+
 - name: ESCAPE_SEQUENCES_IN_AS
   id: 108
   message: "Escape sequences are not allowed in 'as' keyword."
