Fix type use as value bug
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICPVH4?from=project-issue

Signed-off-by: xuxinjie4 <xuxinjie4@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -817,6 +817,10 @@ semantic:
   id: 55
   message: "'{}' cannot be spread in tuple."
 
+- name: INVALID_TYPE_AS_VALUE
+  id: 134683
+  message: "'{}' only refers to a type, but is being used as a value here. "
+
 - name: INVALID_TYPE_PARAM
   id: 168
   message: "Type '{}' is not valid for generic type arguments"
