arkts-concurrent-deprecated-apis impl
Description: arkts-concurrent-deprecated-apis rule implemented
Issue: ICNZN3
Signed-off-by: sefayilmazunal <sefa.yilmaz.unal@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -15,6 +15,7 @@
     "arkts-limited-stdlib",
     "arkts-no-class-add-super-prop-with-readonly",
     "arkts-var-assignment-before-use",
+    "arkts-concurrent-deprecated-apis",
     "arkts-no-classes-as-obj",
     "arkts-obj-literal-props",
     "arkts-no-template-string-type",
