Rule arkts-not-support-tuple-generic-validation
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICPIGX
Signed-off-by: muratcimen_9be2 <murat.cimen@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -71,7 +71,8 @@
 	"arkts-no-duplicate-function-name",
     "arkts-require-func-arg-type",
 	"arkts-subclass-must-call-super-constructor-with-args",
-    "arkts-no-esobject-support"
+    "arkts-no-esobject-support",
+    "arkts-not-support-tuple-generic-validation"
   ],
   "interop": [
     "arkts-interop-js2s-inherit-js-class",
