Fix namespace same name builtin class crash
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICQTLF

Description:
For namespace, it is permissible to define classes and interfaces with the same names as built-in ones, and it should not return the built-in ETSObjectType.

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: zengzengran <zengran2@huawei.com>#

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -184,6 +184,8 @@ defines:
     ref: SYMBOL
   - name: 'escompat.Array'
     ref: ESCOMPAT_ARRAY
+  - name: 'escompat.ReadonlyArray'
+    ref: ESCOMPAT_READONLYARRAY
   - name: 'ByteType.VAL'
     ref: BYTETYPE_VAL
   - name: 'IntType.VAL'
