arkts-distinct-infinity-bitwise-inversion
Issue: #ICQ4MZ

Description: arkts-distinct-infinity-bitwise-inversion rule implementation
Signed-off-by: Raif Mirza Erten <raif.mirza.erten@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -24,6 +24,7 @@
     "arkts-numeric-semantic",
     "arkts-incompatible-function-types",
     "arkts-limited-void-type",
+    "arkts-distinct-infinity-bitwise-inversion",
     "arkts-no-void-operator",
     "arkts-no-local-class",
     "arkts-no-ts-overload",
