arkts-use-long-for-large-numeric-literal
Issue: #ICPJER

Description: arkts-use-long-for-large-numeric-literal rule implementation
Signed-off-by: Raif Mirza Erten <raif.mirza.erten@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -21,6 +21,7 @@
     "arkts-no-template-string-type",
     "arkts-obj-literal-key-type",
     "arkts-optional-methods",
+    "arkts-use-long-for-large-numeric-literal",
     "arkts-numeric-semantic",
     "arkts-incompatible-function-types",
     "arkts-limited-void-type",
