--- a/ets2panda/util/diagnostic/warning.yaml
+++ b/ets2panda/util/diagnostic/warning.yaml
@@ -117,12 +117,15 @@ warning:
   id: 2
   message: "Suggest 'final' modifier for method."
 
+- name: THIS_IN_FIELD_INITIALIZER
+  id: 10
+  message: "The instance field initializer expression cannot use the this."
+
 - name: UNREACHABLE_STMT
   id: 26
   message: "Unreachable statement."
 
 graveyard:
-- 10
 - 18
 - 19
 - 27
