[lsp][hybird] support 1.2 -> 1.1
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICRAG7
Signed-off-by: lijunru <lijunru9@h-partners.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -309,6 +309,10 @@ ets2panda_add_gtest(lsp_api_get_node_test CPP_SOURCES
     get_node_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_get_node_infos_test CPP_SOURCES
+    get_node_infos_test.cpp
+)
+
 ets2panda_add_gtest(lsp_api_get_definition_from_node_test CPP_SOURCES
     get_definition_from_node_test.cpp
 )
