--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -49,11 +49,7 @@ shared_library("ts_bindings") {
     "$ark_root/libarkfile:arkfile_public_config",
   ]
 
-  deps = [
-    "../:libes2panda_frontend_static",
-    "../:libes2panda_public_frontend_static",
-    "../lsp:libes2panda_lsp_static",
-  ]
+  deps = [ "../lsp:libes2panda_lsp_static" ]
 
   include_dirs = [
     "./native/include",
