--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -20,12 +20,13 @@
     "pack:linter": "rimraf bundle && mkdir bundle && npm pack && mv panda-tslinter-*.tgz bundle",
     "pretest": " npm run fix",
     "test": "npm run test_all && npm run test_ts_import_ets",
-    "test_all": "npm run testrunner -- -d test/main,test/rules,test/regression,test/extended_features,test/migration,test/ohmurl,test/interop,test/sdkwhite,test/concurrent,test/builtin,test/deprecatedapi,test/sdkcommonapi",
+    "test_all": "npm run testrunner -- -d test/main,test/rules,test/regression,test/extended_features,test/migration,test/ohmurl,test/interop,test/sdkwhite,test/concurrent,test/builtin,test/deprecatedapi, test/taskpool,test/sdkcommonapi",
     "test_main": "npm run testrunner -- -d test/main",
     "test_ohmurl": "npm run testrunner -- -d test/ohmurl",
     "test_interop": "npm run testrunner -- -d test/interop",
     "test_sdk": "npm run testrunner -- -d test/sdkwhite",
     "test_deprecatedapi": "npm run testrunner -- -d test/deprecatedapi",
+    "test_taskpool": "npm run testrunner -- -d test/taskpool",
     "test_sdkcommonapi": "npm run testrunner -- -d test/sdkcommonapi",
     "test_concurrent": "npm run testrunner -- -d test/concurrent",
     "test_rules": "npm run testrunner -- -d test/rules",
@@ -38,7 +39,7 @@
     "test_ts_import_ets": "npm run testrunner -- -d test/ts_import_ets/ts --sdk --interop-mode",
     "test_migration": "npm run testrunner -- -d test/migration",
     "testrunner": "npm run compile && node build/testRunner/TestRunner.js",
-    "update-tests": "node scripts/update-test-results.mjs test/main test/rules test/regression test/extended_features test/ts_import_ets/ts test/migration test/ohmurl test/interop test/sdkwhite test/concurrent test/builtin test/deprecatedapi test/sdkcommonapi",
+    "update-tests": "node scripts/update-test-results.mjs test/main test/rules test/regression test/extended_features test/ts_import_ets/ts test/migration test/ohmurl test/interop test/sdkwhite test/concurrent test/builtin test/deprecatedapi test/sdkcommonapi test/taskpool",
     "eslint-check": "npx eslint .",
     "eslint-fix": "npm run eslint-check -- --fix",
     "prettier-fix": "npx prettier --write .",
