arkts-limited-tuple-index-type rule
Issue: #ICRD6M

Description: arkts-limited-tuple-index-type rule rule implementation
Signed-off-by: Raif Mirza Erten <raif.mirza.erten@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -23,6 +23,7 @@
     "arkts-optional-methods",
     "arkts-use-long-for-large-numeric-literal",
     "arkts-numeric-semantic",
+    "arkts-limited-tuple-index-type",
     "arkts-incompatible-function-types",
     "arkts-limited-void-type",
     "arkts-distinct-infinity-bitwise-inversion",
