distinct-unsigned-right-shift-negative-number
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICQDPB
Signed-off-by: muratcimen_9be2 <murat.cimen@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -65,6 +65,7 @@
     "arkts-no-sparse-array",
     "arkts-no-enum-prop-as-type",
     "arkts-no-ts-like-smart-type",
+    "arkts-distinct-unsigned-right-shift-negative-number",
     "arkts-array-type-immutable",
     "arkts-primitive-type-normalization",
     "arkts-no-ts-like-catch-type",
