--- a/arkguard/BUILD.gn
+++ b/arkguard/BUILD.gn
@@ -13,7 +13,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//build/templates/cxx/prebuilt.gni")
+if ((defined(ark_standalone_build) && ark_standalone_build) ||
+    (defined(ark_static_standalone_build) && ark_static_standalone_build)) {
+  import("//arkcompiler/runtime_core/static_core/ark_config.gni")
+} else {
+  import(
+      "//build/config/components/runtime_core/static_core/ark_common_config.gni")
+}
 
 typescript_dir = get_label_info("//third_party/typescript:build_typescript",
                                 "target_out_dir")
@@ -63,10 +69,11 @@ action("build_arkguard") {
   outputs = [ "${target_out_dir}/arkguard-1.1.3.tgz" ]
 }
 
-ohos_prebuilt_etc("build_arkguard_etc") {
-  source = "OAT.xml"
-  deps = [ ":build_arkguard" ]
-  install_enable = false
-  part_name = "ets_frontend"
-  subsystem_name = "arkcompiler"
+if (!(defined(ark_static_standalone_build) && ark_static_standalone_build)) {
+  ohos_shared_headers("build_arkguard_etc") {
+    include_dirs = []
+    deps = [ ":build_arkguard" ]
+    part_name = "ets_frontend"
+    subsystem_name = "arkcompiler"
+  }
 }
