abstract override check rule impl
Description: arkts-distinct-abstract-method-default-return-type rule implemented
Issue: ICRHUI
Signed-off-by: sefayilmazunal <sefa.yilmaz.unal@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -61,6 +61,7 @@
     "arkts-limited-stdlib-no-setTransferList",
     "arkts-builtin-object-getOwnPropertyNames",
     "arkts-no-class-omit-interface-optional-prop",
+    "arkts-distinct-abstract-method-default-return-type",
     "arkts-class-no-signature-distinct-with-object-public-api",
     "arkts-no-sparse-array",
     "arkts-no-enum-prop-as-type",
