--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1045,6 +1045,7 @@ semantic:
 - name: OVERRIDE_DOESNT_OVERRIDE
   id: 136
   message: "Method {}{} in {} not overriding any method"
+  code_fix_ids: [RemoveOverrideModifier]
 
 - name: PARAM_COUNT_MISMATCH
   id: 124
