--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -94,6 +94,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/register_code_fix/convert_const_to_let.cpp",
     "src/register_code_fix/fix_add_function_return_statement.cpp",
     "src/register_code_fix/fix_class_doesnt_implement_inherited_abstract_member.cpp",
+    "src/register_code_fix/fix_class_incorrectly_implements_interface.cpp",
     "src/register_code_fix/fix_class_super_must_precede_this_access.cpp",
     "src/register_code_fix/fix_expected_comma.cpp",
     "src/register_code_fix/fix_extends_interface_becomes_implements.cpp",
