Fix sdk building failed
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICRXGU

Signed-off-by: huyunhui <huyunhui3@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -1139,7 +1139,7 @@ config("libes2panda_config") {
     "-Werror=shadow",
   ]
 
-  if (!is_debug) {
+  if (!is_debug && !is_mac) {
     cflags_cc += [
       "-flto=thin",
       "-O3",
