--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -62,6 +62,7 @@
     "arkts-no-class-omit-interface-optional-prop",
     "arkts-distinct-abstract-method-default-return-type",
     "arkts-class-no-signature-distinct-with-object-public-api",
+    "arkts-union-assignment-with-obj-literal-ambiguity",
     "arkts-no-sparse-array",
     "arkts-no-enum-prop-as-type",
     "arkts-no-ts-like-smart-type",
