--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -559,6 +559,7 @@ semantic:
 - name: IMPORT_NOT_FOUND
   id: 356
   message: "Cannot find imported element '{}'"
+  code_fix_ids: [FixSpelling]
 
 - name: IMPORT_NOT_FOUND_2
   id: 360
@@ -1403,6 +1404,7 @@ semantic:
 - name: UNRESOLVED_REF
   id: 143
   message: "Unresolved reference {}"
+  code_fix_ids: [FixSpelling]
 
 - name: UNSUPPORTED_CLASS_LITERAL
   id: 20
