[LSPAPI]CodeFix_FixImportNonExportedMember
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICS6SP
Signed-off-by: doneyildiz <done.yildiz@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -554,6 +554,7 @@ semantic:
 - name: IMPORTED_NOT_EXPORTED
   id: 355
   message: "Imported element not exported '{}'"
+  code_fix_ids: [FixImportNonExportedMember]
 
 - name: IMPORT_NOT_FOUND
   id: 356
