--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -120,6 +120,7 @@ set(ES2PANDA_LSP_SRC
   ./src/register_code_fix/convert_const_to_let.cpp
   ./src/register_code_fix/constructor_for_derived_need_super_call
   ./src/register_code_fix/fix_missing_call_parantheses.cpp
+  ./src/register_code_fix/fix_import_non_exported_member.cpp
   ./src/register_code_fix/fix_nan_equality.cpp
   ./src/register_code_fix/forgotten_this_property_access.cpp
   ./src/register_code_fix/import_fixes.cpp
