add large numeric literal check
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICSN18

Test scenarios: npm test for linter

Signed-off-by: liwentao <liwentao20@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -77,7 +77,8 @@
     "arkts-subclass-must-call-super-constructor-with-args",
     "arkts-no-esobject-support",
     "arkts-not-support-tuple-generic-validation",
-    "arkts-no-optional-tuple-type"
+    "arkts-no-optional-tuple-type",
+    "arkts-no-large-numeric-literal"
   ],
   "interop": [
     "arkts-interop-js2s-inherit-js-class",
