--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -88,6 +88,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/refactors/convert_template.cpp",
     "src/refactors/refactor_types.cpp",
     "src/references.cpp",
+    "src/register_code_fix/add_local_variable.cpp",
     "src/register_code_fix/add_missing_declare_property.cpp",
     "src/register_code_fix/add_missing_new_operator.cpp",
     "src/register_code_fix/constructor_for_derived_need_super_call.cpp",
