--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -523,6 +523,10 @@ semantic:
   message: "{} is not abstract and does not implement getter for {} property in {}"
   code_fix_ids: [FixClassIncorrectlyImplementsInterfaceForSetter]
 
+- name: GETTER_VOID
+  id: 86
+  message: "Getter must return a value"
+
 - name: ID_IN_WRONG_CTX
   id: 144
   message: "{} name '{}' used in the wrong context"
@@ -1377,6 +1381,10 @@ semantic:
   id: 364
   message: "Structs are only used to define UI components, it should be translated at 'plugin after parser' phase."
 
+- name: UNEXPECTED_VALUE_RETURN
+  id: 89
+  message: "Unexpected return value, enclosing method return type is void."
+
 - name: UNEXPECTED_VOID
   id: 93
   message: "'{}' shouldn't have void return type."
@@ -1462,8 +1470,6 @@ graveyard:
 - 60
 - 75
 - 85
-- 86
-- 89
 - 90
 - 95
 - 102
